samples/_failures_safe/1761250461_3a66d6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_de6acfe1.c: In function ‘main’:
./samples/SAFE/__tmp_de6acfe1.c:162:10: error: ‘EVENT’ undeclared (first use in this function)
  162 |         {EVENT
      |          ^~~~~
./samples/SAFE/__tmp_de6acfe1.c:162:10: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_de6acfe1.c:163: error: expected ‘}’ at end of input
./samples/SAFE/__tmp_de6acfe1.c:162:9: note: to match this ‘{’
  162 |         {EVENT
      |         ^
./samples/SAFE/__tmp_de6acfe1.c:162:9: error: expected declaration or statement at end of input
